# pycdr

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
Docker/: Dockerfile
benchmarks/: README.md  Snakefile  config.yaml
benchmarks/enrichment_utils/: gosim.py  ontology_analysis.py  search_utils.py
benchmarks/enrichment_utils/data/: gene_index.csv  mouse_index.csv
benchmarks/scripts/: bench_permutation.py  collect_results.py  generate_synthetic.py  plot_benchmark.py  plot_permutation.py  run_benchmark.py
docs/: PERMUTATION_SCALING.md  algorithm.rst  api.rst  conf.py  example_analysis.rst  getting_started.rst  index.rst  installation.rst  pycdr.perm.calculate_enrichment.rst  pycdr.pycdr.run_CDR_analysis.rst  pycdr.utils.filter_genecounts_numcells.rst  pycdr.utils.filter_genecounts_percent.rst  pycdr.utils.output_results.rst
pycdr/: .coverage  README.md  __init__.py  _tail_approx.py  cli.py  enrichment.py  experimental.py  feature_selection.py  kruskal.py  perm.py  plotting.py  pycdr.py  reporting.py  utils.py
pycdr/data/: Untitled.ipynb  test_muscle.h5ad
pycdr/data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pycdr/test/: .coverage  test_cli.py  test_pycdr.py  test_pycdr.py~  test_reporting.py
revision/notes/: fdr_investigation_report.md  fdr_monocyte_results.md  signed_factors_investigation.md
