[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdr-py"
version = "0.0.3"
description = "CDR algorithm for multi-condition single-cell data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "WL Chin", email = "melvin.chin@research.uwa.edu.au" },
]
dependencies = [
    "anndata>=0.9",
    "scipy>=1.10",
    "dask-ml>=2023.3",
    "tqdm",
    "pandas>=1.5",
    "numpy>=1.24",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://github.com/wlchin/pycdr"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["pycdr"]

[tool.pytest.ini_options]
testpaths = ["pycdr/test"]
